--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<img src="/img/3060378cb77e001cf68d9acc9cf94a0d_1.jpg" class="js-avatar">
 		</a>
 		<hgroup>
-		  <h1 class="header-author"><a href="/">日天</a></h1>
+		  <h1 class="header-author"><a href="/">会唱小跳蛙吗</a></h1>
 		</hgroup>
 		
 
@@ -104,7 +104,7 @@
 				<img src="/img/3060378cb77e001cf68d9acc9cf94a0d_1.jpg" class="js-avatar">
 			</div>
 			<hgroup>
-			  <h1 class="header-author js-header-author">日天</h1>
+			  <h1 class="header-author js-header-author">会唱小跳蛙吗</h1>
 			</hgroup>
 			
 			
@@ -233,7 +233,7 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; 2018 日天
+    		&copy; 2018 会唱小跳蛙吗
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
